// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<div>
  <div
    className="callout callout-danger m-0 py-3"
  >
    <div>
      <a
        href="testurl"
      >
        testtitle
      </a>
    </div>
    <small
      className="mr-3"
    >
      <t
        ago={false}
        calendar={false}
        element="time"
        filter={[Function]}
        format="MMMM D, YYYY"
        fromNow={false}
        interval={60000}
        onChange={[Function]}
        toNow={false}
        unix={false}
        utc={false}
      />
    </small>
    <Badge
      className="d-none"
      color="danger"
      data-spec="news-item-badge"
      pill={false}
      tag="span"
    >
       New
    </Badge>
  </div>
  <hr
    className="mx-3 my-0"
  />
</div>
`;

exports[`rendering snapshots should render valid snapshot when unread 1`] = `
<div>
  <div
    className="callout callout-danger m-0 py-3"
  >
    <div>
      <a
        href="testurl"
      >
        testtitle
      </a>
    </div>
    <small
      className="mr-3"
    >
      <t
        ago={false}
        calendar={false}
        element="time"
        filter={[Function]}
        format="MMMM D, YYYY"
        fromNow={false}
        interval={60000}
        onChange={[Function]}
        toNow={false}
        unix={false}
        utc={false}
      />
    </small>
    <Badge
      className="float-right"
      color="danger"
      data-spec="news-item-badge"
      pill={false}
      tag="span"
    >
       New
    </Badge>
  </div>
  <hr
    className="mx-3 my-0"
  />
</div>
`;
